# pert_belly_hack-frontend-crap

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  build.sh  clean.sh  evil_client.py  github_io.conf  harvest.py  index.html  init_virtualenv.sh  jshint_report.txt  latest.opk  prepare_package_contents.py  qa.sh  requirements-testing.txt  requirements.txt  reverse_proxy_configuration.py  setup.cfg  setup.py
contrib/cosh_scripts.d/: rsync_deploy.py  rsync_exclude
pert_belly_hack_frontend_crap/: _version.py  defaults.py
plugin/controllers/: ajax.py
plugin/controllers/views/: index.tmpl
plugin/controllers/views/ajax/: boxinfo.tmpl  channels.tmpl  edittimer.tmpl  epgdialog.tmpl  epgpop.tmpl  event.tmpl  multiepg.tmpl  renderevtblock.py  settings.tmpl  timers.tmpl
plugin/public/css/: style.min.css
plugin/public/js/: openwebif.9cc661f19ccb1202e88861849ed3a8bcba25adc4d8830cc5acd968fba75acd4a.js
sourcefiles/js/: openwebif.js
sourcefiles/scss/: _original-small-screen.scss  _theme_original.scss  style.scss
